<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProductActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="361dp"
        android:layout_height="516dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteX="18dp">

            <TextView
                android:id="@+id/createProductLabel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Create Product"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.065"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/createProductName"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductLabel" />

            <EditText
                android:id="@+id/createProductWeight"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="number"
                android:hint="@string/weight_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductName" />

            <EditText
                android:id="@+id/createProductPrice"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="number"
                android:hint="@string/price_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductWeight" />

            <EditText
                android:id="@+id/createProductDiscount"
                android:layout_width="325dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="number"
                android:hint="@string/discount_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.388"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductPrice" />

            <TextView
                android:id="@+id/createProductConditionLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:text="Condition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductDiscount" />

            <RadioGroup
                android:id="@+id/radioGroupCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:checkedButton="@id/newCondition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.684"
                app:layout_constraintStart_toEndOf="@+id/createProductConditionLabel"
                app:layout_constraintTop_toBottomOf="@+id/createProductDiscount">

                <RadioButton
                    android:id="@+id/newCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/new_label" />

                <RadioButton
                    android:id="@+id/usedCondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/used_label" />
            </RadioGroup>

            <TextView
                android:id="@+id/createProductCategoryLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/category_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductConditionLabel" />

            <Spinner
                android:id="@+id/createProductCategory"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:entries="@array/productCategory"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.854"
                app:layout_constraintStart_toEndOf="@+id/createProductCategoryLabel"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupCondition" />

            <TextView
                android:id="@+id/createProductShipmentPlanLabel"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Shipment Plan"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.053"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createProductCategoryLabel" />

            <Spinner
                android:id="@+id/createProductShipmentPlan"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="34dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="4dp"
                android:entries="@array/shipmentPlans"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.823"
                app:layout_constraintStart_toEndOf="@+id/createProductShipmentPlanLabel"
                app:layout_constraintTop_toBottomOf="@+id/createProductCategory" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/cancelCreateProductButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/createProductButton"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>